Fixed people on mobile

--- a/greater/less/greater-main.less
+++ b/greater/less/greater-main.less
@@ -512,36 +512,19 @@ p {
     }
     #people {
         div {
-            width: 50%;
             margin: 0;
             float: left;
             height: 300px;
             .background-cover(cover);
             background-position: center center;
-            position: relative;
-            overflow: hidden;
             display: inline-block;
-            &:hover,
-            &:focus {
-                span {
-                    .scale(1);
-                    opacity: 1;
-                }                
-            }
             a {
                 text-decoration: underline;
             }
             span {
-                .scale(2);
-                position: absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
                 padding: 15% 10% 15%;
                 background: url(../img/lines-small.svg) right center rgba(0,0,0,.75);
                 .transition(all .1s linear);
-                opacity: 0;
                 vertical-align: middle;
                 p {
                     margin-bottom: 0;
@@ -591,16 +574,50 @@ p {
             background-image: url(../img/8-sharon.jpg) 
         }
     }
+    @media(max-width:768px) {
+        #people {
+            div {
+                margin-bottom: 168px;
+                min-height: 350px;
+                width: 50%;
+                span {
+                    display: block;
+                    margin-top: 270px;
+                    min-height: 260px;
+                    background-color: black;
+                }
+            }
+        }
+    }
+    @media(max-width:380px) {
+        #people {
+            div {
+                width: 100%;
+            }
+        }
+    }
     @media(min-width:768px) {
         #people {
             div {
                 width: 25%;
                 height: 400px;
                 display: table;
+                position: relative;
+                overflow: hidden;
+                display: table;
+                &:hover,
+                &:focus {
+                    span {
+                        .scale(1);
+                        opacity: 1;
+                    }                
+                }
                 span {
                     padding: 0 15px;
                     display: table-cell;
                     position: static;
+                    .scale(2);
+                    opacity: 0;
                 }
                 p {
                     font-size: 15px;
